--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment two</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -13,7 +19,7 @@
             <div class="logo">
                 <img src="assets/logo.png" alt="">
             </div>
-            <div class="nav-item ">
+            <div class="nav-item open-sans-inter ">
                 <ul class="flex">
                     <li class="hide">Home</li>
                     <li class="hide">Shop</li>
@@ -23,9 +29,83 @@
                 
             </div>
         </section>
+        <section class="banner-section flex theme-width open-sans-noto">
+            <div class="banner-text">
+                <h2 class="banner-title"> ALWAYS <span class="color-primary ">FRESH FLOWERS</span></h2>
+                <p class="banner-description open-sans-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div class="banner-image"><img src="assets/hero-flower.png" alt=""></div>
+        </section>
     </header>
     <main>
-
+        <section class="plant-section theme-width">
+            <div class="plant-header center">
+                <h2 class="plant-title open-sans-noto "> <span class="color-primary">Our</span> Plants</h2>
+                <div class="plant-description open-sans-inter ">Indulge your senses with the beauty and fragrance of our fresh flower shop.  From classic roses to exotic blooms, we offer a wide variety of fresh.</div>
+            </div>
+            <div class="plant-container">
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p class="plant-name"></p>
+                    <p class="plant-rate"></p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
