plant section complete

--- a/index.html
+++ b/index.html
@@ -38,71 +38,83 @@
         </section>
     </header>
     <main>
-        <section class="plant-section theme-width">
+        <section class="plant-section open-sans-inter theme-width ">
             <div class="plant-header center">
                 <h2 class="plant-title open-sans-noto "> <span class="color-primary">Our</span> Plants</h2>
-                <div class="plant-description open-sans-inter ">Indulge your senses with the beauty and fragrance of our fresh flower shop.  From classic roses to exotic blooms, we offer a wide variety of fresh.</div>
+                <div class="plant-description  ">Indulge your senses with the beauty and fragrance of our fresh flower shop.  From classic roses to exotic blooms, we offer a wide variety of fresh.</div>
             </div>
-            <div class="plant-container">
+            <div class="plant-container center">
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
-                    <p class="plant-name"></p>
-                    <p class="plant-rate"></p>
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <p class="plant-name">Lily Blossom</p>
+                    <p class="plant-rate">20 USD</p>
+                    <button class="btn-primary">ADD TO CART</button>
                 </div>
             </div>
         </section>
