flower-lover-section complete

--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
                 </div>
             </div>
         </section>
+        <section class="plant-lover-section flex theme-width open-sans-inter">
+            <div class="lover-image">
+                <img src="assets/flower-store.png" alt="">
+            </div>
+            <div class="lover-text">
+                <h2 class="lover-header open-sans-noto">Flower & Plants Lover</h2>
+                <ul>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
