--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         </section>
         <section class="plant-lover-section flex theme-width open-sans-inter">
             <div class="lover-image">
-                <img src="assets/flower-store.png" alt="">
+                <img class="flower-store" src="assets/flower-store.png" alt="">
+                <img class="trusted-badge hide" src="assets/trusted-badge.png" alt="">
             </div>
             <div class="lover-text">
                 <h2 class="lover-header open-sans-noto">Flower & Plants Lover</h2>
@@ -129,6 +130,38 @@
                     <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                     <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                 </ul>
+            </div>
+        </section>
+        <section class="lates-deal-section open-sans-noto theme-width">
+            <div class="deal-info">
+                <h2 class="deal-title center open-sans-inter"> <span class="color-primary">Latest </span>Deals</h2>
+                <p class="deal-description center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="card-item flex">
+                <div class="multi-card">
+                    <div class="card-1">
+                        <div class="color">
+                            <P class="inside-card">60% Off | Bloom Plant</P>
+                            <a href="#" class="inside-card">Shop Now</a>
+                        </div>
+                    </div>
+                    
+                    <div class="card-2">
+                        <div class="color">
+                            <p>
+                            30% Off | Ana  Plant
+                            </p>
+                            <a href="#" class="inside-card">Shop Now</a>
+                        </div>
+                       
+                    </div>
+                </div>
+                <div class="single-card">
+                    <div class="card-right">
+                        <p class="discount-style"> 25% Off | Zabo Plant </p>
+                        <a href="#" class="inside-card-right">Shop Now</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
