join section complete

--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
                 </div>
             </div>
         </section>
+        <section class="join-section open-sans-noto">
+            <div class="join-item">
+                <h2 class="join-header">Join the colorful Bunch</h2>
+                <form class="input-box">
+                    <input class="input-text" type="email" placeholder="Write email">
+                    <button type="submit" class="btn-primary subscribe">Subscribe</button>
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
 
