footer section complete

--- a/index.html
+++ b/index.html
@@ -175,7 +175,33 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer-section open-sans-inter theme-width">
+            <div class="footer-item flex">
+                <div class="footer-text ">
+                    <img src="assets/logo.png" alt="">
+                    <p class="footer-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+                </div>
+                <div class="footer-nav flex-1">
+                    <ul class="footer-nav-1">
+                        <a href=""><li>Home</li></a>
+                        <a href=""><li>About Us</li></a>
+                        <a href=""><li>Blog</li></a>
+                        <a href=""><li>FAQ</li></a>
+                        <a href=""><li>Contact Us</li></a>
+                    </ul>
+                </div>
+                <div class="footer-nav flex-1">
+                    <ul class="footer-nav-2">
+                        <a href=""><li>Features</li></a>
+                        <a href=""><li>Pricing</li></a>
+                        <a href=""><li>Privacy Policy</li></a>
+                        <a href=""><li>Terms of Service</li></a>
+                        <a href=""><li>Help Center</li></a>
+                    </ul>
+                </div>
+                <div class="footer-social "><img src="assets/icon-linkedin.png" alt=""><img src="assets/icon-twitter.png" alt=""><img src="assets/icon-facebook.png" alt=""><img src="assets/icon-youtube.png" alt=""></div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
